--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO = mongodb+srv://ruslan441006:4xXpGZvjIsn7I8L4@cluster0.lc6ql.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO = mongodb+srv://ruslan441006:4xXpGZvjIsn7I8L4@cluster0.lc6ql.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
