--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 MONGO = mongodb+srv://ruslan441006:4xXpGZvjIsn7I8L4@cluster0.lc6ql.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
+
+# MONGODB_USER=ruslan441006
+# MONGODB_PASSWORD=4xXpGZvjIsn7I8L4
+# MONGODB_URL=cluster0.lc6ql.mongodb.net
