--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ MONGO = mongodb+srv://ruslan441006:4xXpGZvjIsn7I8L4@cluster0.lc6ql.mongodb.net/t
 # MONGODB_USER=ruslan441006
 # MONGODB_PASSWORD=4xXpGZvjIsn7I8L4
 # MONGODB_URL=cluster0.lc6ql.mongodb.net
+
+NEXTAUTH_URL="http://localhost:3000/"
+NEXTAUTH_SECRET="ItI7AcrN2xPFhVShdmVb9puUPK08R8Z3kYNE5of4RFo"
