--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ MONGO = mongodb+srv://ruslan441006:4xXpGZvjIsn7I8L4@cluster0.lc6ql.mongodb.net/t
 
 NEXTAUTH_URL="http://localhost:3000/"
 NEXTAUTH_SECRET="ItI7AcrN2xPFhVShdmVb9puUPK08R8Z3kYNE5of4RFo"
+
+GOOGLE_CLIENT_ID=565322652752171
+GOOGLE_CLIENT_SECRET=gF0NH0NIjOG441CbWnrODIyVTyw
